# oz_assignment

./: README.md
Database/day1/: chapter01_06.ipynb
Database/day8/: challenge_8day.ipynb
Database/day_2/: chapter07_13.ipynb
Database/day_3/: 챌린지(3day).sql
Database/day_4/: day4.sql
Database/study/: day1_DB_DBMS_RDBMS_스키마.ipynb  day2_DB키워드_SQL_데이터타입.ipynb  day2_SQL_데이터타입.ipynb  day2_SQL_데이터타입_DB연동_JOIN.ipynb  day3_정규표현식REGEXP.ipynb  day3_정규표현식REGEXP_JOIN.ipynb  day4_그룹쿼리_ERD_DB연동.ipynb  day5_pymysql실습.ipynb  day7_NoSQL.ipynb  day8_MongoDB.ipynb
Django_Study/: README.md  db.sqlite3  pyproject.toml
Django_Study/boards/: admin.py  models.py
Django_Study/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
Django_Study/common/: models.py
Django_Study/config/: authentication.py  settings.py  urls.py
Django_Study/feeds/: models.py  serializers.py  tests.py  urls.py  views.py
Django_Study/feeds/migrations/: 0001_initial.py
Django_Study/reviews/: models.py  serializers.py  urls.py  views.py
Django_Study/reviews/migrations/: 0001_initial.py
Django_Study/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django_Study/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
HTML&CSS&JS/Mini_Project/: chat.css  chat.html  join.css  join.html  join.js  monster.html  propile_plus.html  survey.html  user.html
HTML&CSS&JS/project/: admin.html  join.html  join.js
HTML&CSS&JS/study/: main.html  study_style.css
(+61 files in other folders)
